--- a/src/App.css
+++ b/src/App.css
@@ -12,29 +12,81 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 
 
 body {
-  background-image: linear-gradient(to right, rgb(152, 188, 243), rgb(215, 167, 247));
+  background-image: linear-gradient(to right, rgb(92, 122, 102), rgb(180, 184, 127));
 }
 
 h1 {
   text-align: center;
+  font-size: 4rem;
+  color: white;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
 
 form {
   display: flex;
   justify-content: center;
+  color: white;
+  padding: 20px;
+  font-size: 2rem;
+}
+
+label {
+  padding: 5px;
+}
+
+input {
+  padding: 10px;
+  border: white;
+}
+
+button {
+  color: white;
+  background-color: rgb(0, 0, 0, 0);
+  border: 2px solid white;
+  padding: 10px;
 
 }
 
 ul {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
 }
 
 li {
-  width: 25%;
-  padding: 50px;
+
   list-style: none;
-  display: flex;
-  flex-direction: column;
+  color: white;
+  font-size: 1.4rem;
 }
 
+
+h2 {
+  text-align: center;
+  text-transform: capitalize;
+  padding: 10px;
+  color: white;
+  font-size: 2.5rem;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+p {
+  padding: 5px;
+}
+
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+  text-align: center;
+  border: 2px solid white;
+  width: 55%;
+  margin: 0 auto;
+}
+
+.picture {
+  padding: 0 20px;
+}
