--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,6 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
   padding: 0;
 }
 
-
-
 body {
   background-image: linear-gradient(to right, rgb(92, 122, 102), rgb(180, 184, 127));
 }
@@ -28,7 +26,6 @@ form {
   justify-content: center;
   color: white;
   padding: 20px;
-  font-size: 2rem;
 }
 
 label {
@@ -36,8 +33,9 @@ label {
 }
 
 input {
-  padding: 10px;
   border: white;
+  font-size: 1.2rem;
+  padding: 2px 10px;
 }
 
 button {
@@ -45,6 +43,15 @@ button {
   background-color: rgb(0, 0, 0, 0);
   border: 2px solid white;
   padding: 10px;
+  
+
+}
+
+button:hover {
+  background-color: white;
+  color: rgb(180, 184, 127);
+  cursor: pointer;
+  border: 2px solid rgb(180, 184, 127);
 
 }
 
@@ -62,7 +69,6 @@ li {
   font-size: 1.4rem;
 }
 
-
 h2 {
   text-align: center;
   text-transform: capitalize;
@@ -76,7 +82,6 @@ p {
   padding: 5px;
 }
 
-
 .wrapper {
   display: flex;
   justify-content: center;
@@ -89,4 +94,8 @@ p {
 
 .picture {
   padding: 0 20px;
+}
+
+li.button {
+  margin: 0 auto;
 }
