--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ h1 {
   text-align: center;
   font-size: 4rem;
   color: white;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: cursive;
 
 }
 
@@ -125,4 +125,9 @@ p {
 
 .removeButton {
   margin: 20px;
+}
+
+.errP {
+  font-size: 1rem;
+  padding: 10px;
 }
