--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@300;400&family=Cookie&family=Karma:wght@400;600&family=Source+Sans+Pro:ital,wght@0,400;1,300;1,400&display=swap');
+
 html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
@@ -20,9 +22,12 @@ body {
 
 h1 {
   text-align: center;
-  font-size: 4rem;
+  font-size: 7rem;
   color: white;
-  font-family: cursive;
+  font-family: 'Cookie', cursive;
+  margin-bottom: -20px;
+  letter-spacing: 3px;
+  font-weight: lighter;
 
 }
 
@@ -30,7 +35,7 @@ form {
   display: flex;
   justify-content: center;
   color: white;
-  padding: 20px;
+  padding: 20px 0 50px 0;
 }
 
 label {
@@ -48,6 +53,8 @@ button {
   background-color: rgb(0, 0, 0, 0);
   border: 2px solid white;
   padding: 10px;
+  font-family: 'Arima Madurai', cursive;
+  font-size: 1.2rem;
   
 
 }
@@ -77,7 +84,7 @@ li {
 
   list-style: none;
   color: white;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 
 h2 {
@@ -85,20 +92,21 @@ h2 {
   text-transform: capitalize;
   padding: 10px;
   color: white;
-  font-size: 2.5rem;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 2rem;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 p {
   padding: 5px;
+  font-family: 'Arima Madurai', cursive;
 }
+
 
 .wrapper {
   display: flex;
   justify-content: center;
   padding: 20px 0;
   text-align: center;
-  /* border: 2px solid white; */
   width: 55%;
   margin: 0 auto;
 }
@@ -109,25 +117,98 @@ p {
 
 .storedInfo {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 
 }
 
 .storedList {
-  padding: 20px;
+  padding: 0 20px;
   border: 2px solid white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: 20px;
+  width: 22%;
+  height: 650px;
+  text-align: center;
 }
 
 .removeButton {
   margin: 20px;
+  font-size: 1rem;
 }
 
 .errP {
-  font-size: 1rem;
+  font-size: 1.2rem;
   padding: 10px;
+}
+
+.app > p {
+  padding: 0 0 45px 0;
+  color: white;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 1rem;
+}
+
+h4 {
+  padding: 5px 0 45px 0;
+  color: white;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 1.5rem;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: lighter;
+
+}
+
+.imgList {
+  width: 100%;
+  height: 250px;
+}
+
+.storedInfo .imgList img { 
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+@media screen and (max-width: 1480px) {
+.storedList {
+
+  width: 28%;
+
+}
+}
+
+@media screen and (max-width: 980px) {
+  .storedList {
+
+    width: 43%;
+
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .storedList {
+
+    width: 65%;
+
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .storedList {
+    width: 85%;
+  }
+
+  input {
+    font-size: 1.1rem;
+  }
+
+  h1 {
+    line-height: 100px;
+    margin-bottom: 10px;
+  }
 }
